# LLM-Quantization-Zoo

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: .gitkeep
docs/: QUICKSTART.md  SETUP_GUIDE.md
notebooks/exllamav2/: Quantize-models-with-ExLlamaV2.ipynb  README.md
notebooks/gguf-llama-cpp/: Quantize-Llama-2-models-using-GGUF-and-llama.cpp.ipynb  README.md
notebooks/gptq/: 4-bit-LLM-Quantization-with-GPTQ.ipynb  README.md
notebooks/weight-quantization-basics/: Introduction-to-Weight-Quantization.ipynb  README.md
scripts/: run_notebooks.sh  setup.sh
