[tool.poetry]
name = "llm-quantization-zoo"
version = "1.0.0"
description = "A comprehensive collection of LLM quantization techniques and implementations"
authors = ["Hao Hoang <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["llm", "quantization", "machine-learning", "deep-learning", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
transformers = "^4.35.0"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.0"
datasets = "^2.14.0"
huggingface-hub = "^0.19.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
matplotlib = "^3.8.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
sentencepiece = "^0.1.99"
protobuf = "^4.24.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[tool.poetry.group.quantization.dependencies]
auto-gptq = {version = "^0.5.0", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

